base de donnee et modification css home page

--- a/templates/clubs/fragments/team.html.twig
+++ b/templates/clubs/fragments/team.html.twig
@@ -1,9 +1,11 @@
 <!--team announcement-->
 <div class="container-fluid padding">
     <div class="welcome text-center">
-        <div class="col-12">
-            <h1 class="display-4">Meet the Team</h1>
+        <span class="w-200px h-3px bg-medium-gray"></span>
+        <div class="alt-font text-medium text-gradient-sky-blue-pink font-weight-500 padding-10px-lr">
+            <h2>Meet The Team</h2>
         </div>
+        <span class="w-200px h-3px bg-medium-gray"></span>
         <hr>
     </div>
 </div>
