--- a/templates/clubs/fragments/welcome.html.twig
+++ b/templates/clubs/fragments/welcome.html.twig
@@ -2,8 +2,8 @@
 <div class="container-fluid padding">
     <div class="welcome text-center">
         <hr class="my-4">
-        <div class="col-12">
-            <h1 class="display-4">Built with love.</h1>
+        <div class="alt-font text-medium text-gradient-sky-blue-pink font-weight-500 padding-10px-lr">
+            <h2>Welcome</h2>
         </div>
         <hr>
         <div class=col-12>
