--- a/templates/clubs/fragments/media.html.twig
+++ b/templates/clubs/fragments/media.html.twig
@@ -5,9 +5,8 @@
 </div>
 <div class="container-fluid padding socials">
     <div class="row text-center padding">
-
-        <div class="col-12">
-            <h2>Connect</h2>
+        <div class="alt-font text-medium text-gradient-sky-blue-pink font-weight-500 padding-10px-lr">
+            <h2>Contact</h2>
         </div>
         <div class="col-12 social padding">
             <a href="#"><i class="fab fa-facebook"></i></a>
