--- a/templates/clubs/fragments/footer.html.twig
+++ b/templates/clubs/fragments/footer.html.twig
@@ -2,31 +2,32 @@
 <footer>
     <div class="container-fluid padding">
         <div class="row text-center">
-            <div class="col-md-4">
+            <div class="col-md-4" style="margin:auto">
                 <img src="/assets/img/logo.png">
-                <hr class="light">
-                <p>+21624158769</p>
-                <p>email@insatclubs.com</p>
-
+                <h6 style="margin-top:20px">+216 24158769</h6>
+                <p style="margin-left:20px;margin-right:20px">Start connecting with clubs from INSAT, stay updated with the latest upcoming events and checkout their merch and products for sale.</p>
+            </div>
+            <div class="col-md-4" style="margin:auto">
+                <h5 style="margin:20px">Discover</h5>
+                <a style="margin:5px;" href={{ path('landing')}}> Home</a>
+                <a style="margin:5px;" href={{ path('account')}}> Account</a>
+                <a style="margin:5px;" href={{ path('clubs')}}> Clubs</a>
+                <a style="margin:5px;" href={{ path('events')}}> Events</a>
+                <a style="margin:5px;" href={{ path('products')}}> Products</a>
+                <a style="margin:5px;" href={{ path('signup')}}> Sign up</a>
+                <a style="margin:5px;" href={{ path('login')}}> Login</a>
+                <a style="margin:5px;" href={{ path('contact')}}> Contact</a>
             </div>
             <div class="col-md-4">
-                <hr class="light">
-                <h5>Lorem Ipsum</h5>
-                <hr class="light">
-                <p>Lorem ipsum dolor sit amet</p>
-                <p>Lorem ipsum dolor sit amet</p>
-
-            </div>
-            <div class="col-md-4">
-                <hr class="light">
-                <h5>Lorem Ipsum</h5>
-                <hr class="light">
-                <p>Lorem ipsum dolor sit amet</p>
-                <p>Lorem ipsum dolor sit amet</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12771.930361487692!2d10.196202!3d36.842893!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4153c4733f285343!2sNational%20Institute%20of%20Applied%20Science%20and%20Technology!5e0!3m2!1sen!2stn!4v1623580843638!5m2!1sen!2stn" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="col-12">
                 <hr class="light-100">
-                <h5>&copy; insatclubs.com</h5>
+                <div class="row" style="margin-top:20px">
+                    <p class="col-sm-4">© 2021 GL2</p>
+                    <p class="col-sm-4"></p>
+                    <p class="col-sm-4">Privacy Policy &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Terms of Service</p>
+                </div>
             </div>
 
         </div>
