--- a/templates/clubs/fragments/caroussel.html.twig
+++ b/templates/clubs/fragments/caroussel.html.twig
@@ -16,13 +16,64 @@
         {'img':"/assets/img/insat/IMG_4901.JPG",'class':""},
         {'img':"/assets/img/insat/IMG_20200224_154319_2-01.jpeg",'class':""},
         {'img':"/assets/img/insat/insat4.jpg",'class':""}] %}
+<style>
+    .svg-wrapper {
+        overflow: hidden;
+        text-align: center;
+        height: 60px;
+        margin: 0 auto;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 320px;
+    }
 
+    .shape {
+        fill: transparent;
+        stroke-dasharray: 140 540;
+        stroke-dashoffset: -474;
+        stroke-width: 8px;
+        stroke: #19f6e8;
+    }
+
+    .text {
+        color: #fff;
+        font-size: 60px;
+        font-family: 'Redressed';
+        letter-spacing: 2px;
+        line-height: 30px;
+        position: relative;
+        top: -48px;
+    }
+
+    @keyframes draw {
+        0% {
+            stroke-dasharray: 140 540;
+            stroke-dashoffset: -474;
+            stroke-width: 8px;
+        }
+        100% {
+            stroke-dasharray: 760;
+            stroke-dashoffset: 0;
+            stroke-width: 2px;
+        }
+    }
+
+    .svg-wrapper:hover .shape {
+        -webkit-animation: 0.5s draw linear forwards;
+        animation: 0.5s draw linear forwards;
+    }
+</style>
 
         <div class="carousel-item  {{ valeur['class']}} ">
             <img  style="height: 600px;" src={{ valeur['img']}} class="prim">
             <div class="carousel-caption">
-                <h1 class="display-2">INSATClubs</h1>
-                <h3>Where clubs gather.</h3>
+               <div class="svg-wrapper">
+                    <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
+                        <rect class="shape" height="60" width="320" />
+                    </svg>
+                    <div class=" text" >Insat clubs</div>
+                </div>
             </div>
         </div>
 
