--- a/templates/clubs/events.html.twig
+++ b/templates/clubs/events.html.twig
@@ -1,2 +1,65 @@
 {% extends 'base.html.twig' %}
 {% block title %}Events{% endblock %}
+{% block css %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.25/datatables.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.25/datatables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready( function () {
+            $('#myTable').DataTable();
+        } );
+    </script>
+    <style>
+        option{
+            background-color: black!important;
+        }
+        #myTable_wrapper{
+            background-color: #040404 !important;
+        }
+        label , div#myTable_info.dataTables_info , select ,input {
+            color:white;
+            font-family: 'Droid Serif', Georgia, Times, serif;
+            font-size: 20px;
+            line-height: 20px;
+        }
+        .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
+            cursor: default;
+            color: white !important;
+            border: 1px solid transparent;
+            background: transparent;
+            box-shadow: none;
+        }
+    </style>
+{% endblock %}
+{% block JS %}
+{% endblock %}
+{% block body %}
+    <div style="margin-top: 100px"></div>
+    <div class="container">
+        <table class="table table-striped table-dark table-responsive-sm " id="myTable">
+
+            <thead>
+            <tr>
+                <th  scope="col col-sm-6">Image</th>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Club</th>
+
+            </tr>
+            </thead>
+            <tbody>
+            {%  for event in events %}
+            <tr>
+                <td><a href={{ path('club',{'clubname':event.getClub().getName()})}}><img  style="width: 80px" src="{{ event.img1 }}"></a></td>
+                <td> <a href={{ path('club',{'clubname':event.getClub().getName()})}}>{{ event.name }} </a></td>
+                <td>{{ event.description }}</td>
+                <td>{{ event.getClub().getName() }}</td>
+
+                {%  endfor %}
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
+{% endblock %}
