--- a/templates/clubs/newsfeed.html.twig
+++ b/templates/clubs/newsfeed.html.twig
@@ -1,2 +1,64 @@
 {% extends 'base.html.twig' %}
 {% block title %}Newsfeed{% endblock %}
+{%  block css %}
+    {{ parent() }}
+   <style>
+       :root {
+           --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+       }
+
+       body {
+           background: #111 !important;
+       }
+
+       .card {
+           background: #222;
+           border: 1px solid #dd2476;
+           color: rgba(250, 250, 250, 0.8);
+           margin-bottom: 2rem;
+       }
+
+       .btn {
+           border: 5px solid;
+           border-image-slice: 1;
+           background: var(--gradient) !important;
+           -webkit-background-clip: text !important;
+           -webkit-text-fill-color: transparent !important;
+           border-image-source:  var(--gradient) !important;
+           text-decoration: none;
+           transition: all .4s ease;
+       }
+
+       .btn:hover, .btn:focus {
+           background: var(--gradient) !important;
+           -webkit-background-clip: none !important;
+           -webkit-text-fill-color: #fff !important;
+           border: 5px solid #fff !important;
+           box-shadow: #222 1px 0 10px;
+           text-decoration: underline;
+       }
+   </style>
+{% endblock %}
+{%  block body %}
+    <div style="margin-top: 100px">
+<div class="container row " style="margin-right: auto!important; margin-left: auto">
+    {%  for feed in newsfeed %}
+        <div class="col-sm-3 " style="">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/assets/img/Clubs/cineradio/cineradio.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ feed.title }}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">{{ feed.getClub().name }}</h6>
+                            <p class="card-text">{{ feed.content }}</p>
+                            <a href={{ path('club',{'clubname':feed.getClub().getName()})}} class="btn mr-2"><i class="fas fa-link"></i> Visit The Club</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {%  endfor %}
+
+</div>
+        {% endblock %}
