--- a/templates/clubs/fragments/footer.html.twig
+++ b/templates/clubs/fragments/footer.html.twig
@@ -1,6 +1,6 @@
 <!--Footer-->
 <footer>
-    <div class="container-fluid padding">
+    <div class="container-fluid">
         <div class="row text-center">
             <div class="col-md-4" style="margin:auto">
                 <img src="/assets/img/logo.png">
@@ -19,7 +19,7 @@
                 <a style="margin:5px;" href={{ path('contact')}}> Contact</a>
             </div>
             <div class="col-md-4">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12771.930361487692!2d10.196202!3d36.842893!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4153c4733f285343!2sNational%20Institute%20of%20Applied%20Science%20and%20Technology!5e0!3m2!1sen!2stn!4v1623580843638!5m2!1sen!2stn" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12771.930361487692!2d10.196202!3d36.842893!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4153c4733f285343!2sNational%20Institute%20of%20Applied%20Science%20and%20Technology!5e0!3m2!1sen!2stn!4v1623580843638!5m2!1sen!2stn" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="col-12">
                 <hr class="light-100">
@@ -29,7 +29,6 @@
                     <p class="col-sm-4">Privacy Policy &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Terms of Service</p>
                 </div>
             </div>
-
         </div>
     </div>
 </footer>
