--- a/templates/clubs/fragments/media.html.twig
+++ b/templates/clubs/fragments/media.html.twig
@@ -9,9 +9,9 @@
             <h2>Contact</h2>
         </div>
         <div class="col-12 social padding">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a>
         </div>
     </div>
 </div>
