--- a/templates/clubs/Account.html.twig
+++ b/templates/clubs/Account.html.twig
@@ -23,7 +23,7 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img src={{ user.image}} alt="Admin" class="rounded-circle" width="150">
+                                <img src= '{{ user.image}}' alt="Admin" class="rounded-circle" width="150">
                                 <div class="mt-3">
                                     <h4>{{ user.fullname}} </h4>
                                     <p class="text-secondary mb-1">{{ user.role }}</p>
@@ -130,7 +130,7 @@
                                     </style>
                                     <div class="vertical-menu">
                                         {% for club in clubs %}
-                                            <a href={{ path('club',{'clubname':club.getName()})}}>{{ club.name}} </a>
+                                            <a href="#">{{ club.name}} </a>
                                         {% endfor %}
                                     </div>
                                 </div>
@@ -142,7 +142,7 @@
                                     <h6 class="d-flex align-items-center mb-3"><i  style="color:#eb345b">upcoming events</i></h6>
                                     <div class="vertical-menu">
                                         {% for event in events %}
-                                        <a href={{ path('club',{'clubname':event.getClub().getName()})}}>{{ event.name}} </a>
+                                        <a href="#">{{ event.name}} </a>
                                         {% endfor %}
                                     </div>
                                 </div>
@@ -190,14 +190,14 @@
                                     <div class="tab-pane p-0 container active" id="signin">
                                         <div class="text w-100">
                                             <h3 class="mb-4">Logins</h3>
-                                            <form action="#" class="signin-form">
+                                            <form action="{{ url('update_logins') }}" class="signin-form" method="post">
                                                 <div class="form-group mb-3">
-                                                    <label class="label" for="name">New Username</label>
-                                                    <input type="text" class="form-control" placeholder="Username" value="{{ user.fullname }}">
+                                                    <label class="label" for="name">email </label>
+                                                    <input type="text" class="form-control" placeholder="Username" value="{{ user.email }}" name="email">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="password">New Password</label>
-                                                    <input type="password" class="form-control" placeholder="Password" >
+                                                    <input type="password" class="form-control" placeholder="Password" name="password">
                                                 </div>
                                                 <div class="form-group" >
                                                     <button type="submit" class="form-control btn btn-primary rounded submit px-3" style="background-color:#eb345b!important; " >Save Change</button>
@@ -208,44 +208,40 @@
                                     <div class="tab-pane p-0 container fade" id="signup">
                                         <div class="text w-100">
                                             <h3 class="mb-4">Personal Data</h3>
-                                            <form action="#" class="signup-form">
+                                            <form action="{{ url('update_account')}}" class="signup-form" method="post" enctype="multipart/form-data">
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="name">Full Name</label>
-                                                    <input type="text" class="form-control" value="{{ user.fullname }}" >
-                                                </div>
-                                                <div class="form-group mb-3">
-                                                    <label class="label" for="email">Email Address</label>
-                                                    <input type="email" class="form-control" value="{{ user.email }}">
+                                                    <input type="text" class="form-control" value="{{ user.fullname }}" name="fullname">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="password">Phone</label>
-                                                    <input type="text" class="form-control" value="{{ user.phone }}">
+                                                    <input type="text" class="form-control" value="{{ user.phone }}" name="phone">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email">Address</label>
-                                                    <input type="text" class="form-control" value="user.address">
+                                                    <input type="text" class="form-control" value="user.address" name="address">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email">Class</label>
-                                                    <input type="text" class="form-control" value="{{ user.class}}" >
+                                                    <input type="text" class="form-control" value="{{ user.class}}" name="class" >
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email" >Twitter Link</label>
-                                                    <input type="url" class="form-control" value="{{ user.twitter }}">
+                                                    <input type="text" class="form-control" value="{{ user.twitter }}" name="twitter">
                                                 </div><div class="form-group mb-3">
                                                     <label class="label" for="email">Instagram Link</label>
-                                                    <input type="url" class="form-control" >
+                                                    <input type="text" class="form-control" value="{{ user.instagram }}" name="instagram">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email">Facebook Link</label>
-                                                    <input type="url" class="form-control" value="{{ user.facebook }}">
+                                                    <input type="text" class="form-control" value="{{ user.facebook }}" name="facebook">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email">uploading profile image</label>
-                                                    <input class="btn btn-primary form-control" type="file" value="upload profile image" style="background-color:#eb345b!important ;height:29px">
+                                                    <input class="btn btn-primary form-control" type="file" value="" style="background-color:#eb345b!important ;height:29px" name="file">
                                                 </div>
                                                 <div class="form-group">
-                                                    <button type="submit" class="form-control btn btn-primary rounded submit px-3" style="background-color:#eb345b!important; ">Save Changes</button>
+                                                    <button type="submit" class="form-control btn btn-primary rounded submit px-3" style="background-color:#eb345b!important; "  >Save Changes</button>
                                                 </div>
                                             </form>
                                         </div>
