--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,6 @@
                             <li><a class="nav-link {% if app.request.attributes.get('_route') == "events"  %}active{% endif %}" href={{ path('events')}}>Events</a></li>
                         {% endif %}
 
-
                         {% if is_granted('ROLE_USER') %}
                             {#
                             <li><a class="nav-link {% if app.request.attributes.get('_route') == "add-event"  %}active{% endif %}" href={{ path('addevent')}}>Addvents</a></li>
@@ -60,6 +59,8 @@
                             <li><a class="nav-link {% if app.request.attributes.get('_route') == "account"  %}active{% endif %}" href={{ path('account')}}>Account</a></li>
                             <li><a class="nav-link {% if app.request.attributes.get('_route') == "logout"  %}active{% endif %}"  href={{ path('logout')}}>Logout</a></li>
                         {% else %}
+                            <li><a class="nav-link {% if app.request.attributes.get('_route') == "products"  %}active{% endif %}" href={{ path('products')}}>Products</a></li>
+                            <li><a class="nav-link {% if app.request.attributes.get('_route') == "events"  %}active{% endif %}" href={{ path('events')}}>Events</a></li>
                             <li><a class="nav-link {% if app.request.attributes.get('_route') == "signup"   %}active{% endif %}"  href={{ path('signup')}}>Sign Up</a></li>
                             <li><a class="nav-link {% if app.request.attributes.get('_route') == "login"  %}active{% endif %}"  href={{ path('login')}}>Login</a></li>
                             <li><a class="nav-link {% if  app.request.attributes.get('_route') == "contact"  %}active{% endif %}"  href={{ path('contact')}}>Contact</a></li>
