--- a/templates/clubs/Account.html.twig
+++ b/templates/clubs/Account.html.twig
@@ -23,7 +23,7 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img src= '{{ user.image}}' alt="Admin" class="rounded-circle" width="150">
+                                <img src= '{{ user.image}}' alt="Admin"  width="200px" height="150px" style="object-fit:cover ;border-radius: 5px">
                                 <div class="mt-3">
                                     <h4>{{ user.fullname}} </h4>
                                     <p class="text-secondary mb-1">{{ user.role }}</p>
@@ -192,10 +192,6 @@
                                             <h3 class="mb-4">Logins</h3>
                                             <form action="{{ url('update_logins') }}" class="signin-form" method="post">
                                                 <div class="form-group mb-3">
-                                                    <label class="label" for="name">email </label>
-                                                    <input type="text" class="form-control" placeholder="Username" value="{{ user.email }}" name="email">
-                                                </div>
-                                                <div class="form-group mb-3">
                                                     <label class="label" for="password">New Password</label>
                                                     <input type="password" class="form-control" placeholder="Password" name="password">
                                                 </div>
@@ -219,7 +215,7 @@
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email">Address</label>
-                                                    <input type="text" class="form-control" value="user.address" name="address">
+                                                    <input type="text" class="form-control" value="{{ user.address }}" name="address">
                                                 </div>
                                                 <div class="form-group mb-3">
                                                     <label class="label" for="email">Class</label>
