--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -238,7 +238,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar a:hover:before, .navbar li:hover > a:before, .navbar .active:before {
   visibility: visible;
-  width: 25px;
+  width: 100%;
 }
 
 .navbar a:hover, .navbar .active, .navbar li:hover > a {
