--- a/templates/clubPage/index.html.twig
+++ b/templates/clubPage/index.html.twig
@@ -37,10 +37,9 @@
                     <iframe width="500" height="250"  title="YouTube video player"   frameborder="0" src={{ club.getVid1()}}
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
-                    <iframe width="500" height="250"  title="YouTube video player" src={{ club.getVid2()}}
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                    <iframe width="500" height="250"  title="YouTube video player"   frameborder="0" src={{ club.vid2}}
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 </div>
             </div>
 
