--- a/templates/clubPage/fragments/SectionEvents.html.twig
+++ b/templates/clubPage/fragments/SectionEvents.html.twig
@@ -12,7 +12,7 @@
                     <li data-filter="*" class="filter-active">All</li>
                     <li data-filter=".filter-training">Training</li>
                     <li data-filter=".filter-competition">Competitions</li>
-                    <li data-filter=".filter-hicking">Hickings</li>
+                    <li data-filter=".filter-hicking">Fun</li>
                 </ul>
             </div>
         </div>
