--- a/templates/clubPage/fragments/SectionAbout.html.twig
+++ b/templates/clubPage/fragments/SectionAbout.html.twig
@@ -11,10 +11,16 @@
 
         <div class="row">
             <div class="col-lg-3" data-aos="fade-right">
-
                 <img id="logo" src={{ club.getImg1()}} alt="">
+
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                {% if (state== 'unfollowed') %}
+                <a href="{{ path('followings',{'clubname':club.name}) }}"><button id="follow-button">+ Follow</button></a>
+                {% endif %}
+                {% if (state=='followed') %}
+                    <a href="{{ path('unfollowings',{'clubname':club.name}) }}"><button id="follow-button">Following</button></a>
+                {% endif %}
                 <h3>{{ club.getOtherInformation()}}</h3>
                 <p class="fst-italic">
                     {{ club.getDescription()}}
