fixed display bug

--- a/templates/clubPage/fragments/Staff.html.twig
+++ b/templates/clubPage/fragments/Staff.html.twig
@@ -6,7 +6,7 @@
            {{ valeur.getDescription() }}
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
         </p>
-        <img src={{ "/"~valeur.getImage() }} class="testimonial-img" alt="">
+        <img src={{ valeur.getImage() }} class="testimonial-img" alt="">
         <h3>{{ valeur.getFullname() }}</h3>
         <h4>{{ valeur.getRole() }}</h4>
     </div>
