--- a/templates/clubPage/fragments/SectionContact.html.twig
+++ b/templates/clubPage/fragments/SectionContact.html.twig
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+        <form action="" method="post" role="form" class="php-email-form mt-4">
             <div class="form-group mt-3">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
             </div>
